--- a/style.css
+++ b/style.css
@@ -3,6 +3,23 @@
     margin: 0px;
 }
 
+#score {
+    margin: auto;
+    margin-top: 50px;
+    width: 200px;
+    height: 50px;
+    border: 1px black solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scoreFont {
+    font-size: 2em;
+    font-weight: bold;
+    
+}
+
 #game {
     margin: auto;
     width: 700px;
@@ -14,20 +31,9 @@
 #player {
     height: 32px;
     width: 32px;
-
     position: relative;
     top: 220px;
     
-}
-
-#enemy {
-    height: 48px;
-    width: 48px;
-    background: url('sprites/Hyena_walk.png');
-    position: relative;
-    top: 171px;
-    left: 652px;
-    animation: spriteEnemy 0.4s steps(6) infinite, enemyRun 1s infinite linear;
 }
 
 .playerRun {
@@ -40,6 +46,28 @@
     animation: jump 500ms, jumpAnimation 500ms steps(8);
 }
 
+.playerDeath {
+    background: url('sprites/Pink_Monster_Death_8.png');
+    animation: playerDeath 2s steps(8);
+}
+
+#enemy {
+    height: 48px;
+    width: 48px;
+    background: url('sprites/Hyena_walk.png');
+    position: relative;
+    top: 171px;
+    left: 652px;
+    animation: spriteEnemy 0.4s steps(6) infinite, enemyRun 1s infinite linear;
+}
+
+
+@keyframes playerDeath {
+    0% {background-position: 0px;}
+    100% {background-position: -256px;}
+}
+
+/* Animation pour faire courir le joueur */
 @keyframes spritePlayer {
     from {
         background-position: 0px;
@@ -50,16 +78,18 @@
     }
 }
 
+/* Faire courir le monstre */
 @keyframes spriteEnemy {
     0% {background-position: 0px;}
     100% {background-position: -288px;}
 }
 
+/* Déplace le monstre de droite à gauche */
 @keyframes enemyRun {
     0% {left: 652px}
     100% {left: -30px}
 }
-
+/* Anime le saut du joueur */
 @keyframes jump {
     0% {top: 220px}
     30% {top: 100px}
@@ -67,6 +97,7 @@
     100% {top: 220px}
 }
 
+/* Anime le sprite du joueur quand il saute */
 @keyframes jumpAnimation {
     0% {background-position: 0px;}
     100% {background-position: -256px;}
