added win animation

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 .scoreFont {
     font-size: 2em;
     font-weight: bold;
-    
+
 }
 
 #game {
@@ -34,7 +34,7 @@
     color: white;
     width: 700px;
     text-shadow: 0px 0px 4px black;
-    position:absolute;
+    position: absolute;
     top: 80px;
     text-align: center;
     font-size: 5em;
@@ -42,7 +42,7 @@
 }
 
 .gameOverAnimate {
-    animation: opacity 2s;
+    animation: opacity 8s;
 }
 
 /* Joueur */
@@ -51,7 +51,7 @@
     width: 32px;
     position: relative;
     top: 220px;
-    
+    left: 0px;
 }
 
 .playerRun {
@@ -67,6 +67,11 @@
 .playerDeath {
     background: url('sprites/Pink_Monster_Death_8.png');
     animation: playerDeath 2s steps(8);
+}
+
+.playerWin {
+    background: url('sprites/Pink_Monster_Walk_6.png');
+    animation: spritePlayer 0.8s steps(6) infinite, playerWin 8s linear;
 }
 
 /* Ennemis */
@@ -89,7 +94,7 @@
 }
 
 .enemy3 {
-    background:url('sprites/monstersRun/Mummy_walk.png');
+    background: url('sprites/monstersRun/Mummy_walk.png');
     /* animation: spriteEnemy 0.4s steps(6) infinite, enemyRun 1s infinite linear; */
 }
 
@@ -139,15 +144,26 @@
 .enemy4SpritesImpossible {
     animation: spriteEnemy4Sprites 0.4s steps(4) infinite, enemyRun 600ms infinite linear;
 }
+
 /* Animations */
 @keyframes opacity {
-    0% {opacity: 0%;}
-    100% {opacity: 100%;}
+    0% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 100%;
+    }
 }
 
 @keyframes playerDeath {
-    0% {background-position: 0px;}
-    100% {background-position: -256px;}
+    0% {
+        background-position: 0px;
+    }
+
+    100% {
+        background-position: -256px;
+    }
 }
 
 /* Animation pour faire courir le joueur */
@@ -163,30 +179,73 @@
 
 /* Faire courir le monstre */
 @keyframes spriteEnemy {
-    0% {background-position: 0px;}
-    100% {background-position: -288px;}
+    0% {
+        background-position: 0px;
+    }
+
+    100% {
+        background-position: -288px;
+    }
 }
 
 @keyframes spriteEnemy4Sprites {
-    0%{background-position: 0px;}
-    100%{background-position: -192px;}
+    0% {
+        background-position: 0px;
+    }
+
+    100% {
+        background-position: -192px;
+    }
 }
 
 /* Déplace le monstre de droite à gauche */
 @keyframes enemyRun {
-    0% {left: 652px}
-    100% {left: -30px}
+    0% {
+        left: 652px
+    }
+
+    100% {
+        left: -30px
+    }
 }
+
+/* Met le joueur au milieu quand il gagne */
+@keyframes playerWin {
+    0% {
+        left: 0px
+    }
+
+    100% {
+        left: 700px
+    }
+}
+
 /* Anime le saut du joueur */
 @keyframes jump {
-    0% {top: 220px}
-    30% {top: 100px}
-    70% {top: 100px}
-    100% {top: 220px}
+    0% {
+        top: 220px
+    }
+
+    30% {
+        top: 100px
+    }
+
+    70% {
+        top: 100px
+    }
+
+    100% {
+        top: 220px
+    }
 }
 
 /* Anime le sprite du joueur quand il saute */
 @keyframes jumpAnimation {
-    0% {background-position: 0px;}
-    100% {background-position: -256px;}
+    0% {
+        background-position: 0px;
+    }
+
+    100% {
+        background-position: -256px;
+    }
 }
